new_tests/semantics/type/bad/073_CD1.cm

class A {}

def a:A<Int> = new A()
